--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 10;
+    padding: 15;
 
 }
 
 header{
-    background-color: lightskyblue;
+    background-color: #1e89cc;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    padding: 40px;
 }
 
 section{
